# reach-for-the-arcs-code

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build_and_test.sh  requirements.txt
cmake/: PoissonRecon.cmake
data/: arc-du-carrousel.txt  armbrust.txt  arquebusier.txt  chatz.txt  fence.txt  fish.txt  holzfaeller.txt  manhole.txt  naehmaschine.txt  pont_du_gard.txt  pumpkin.txt  schild.txt  willi.txt  windowcat.txt
ext/PoissonRecon/Src/: Reconstructors.h
results/: .gitignore
results/batch-size-ablation/: chamfer-errors.eps  runtimes.eps
results/fine-tuning-plot/: chamfer_distances.eps  chamfer_distances_log.eps  hausdorff_distances.eps  hausdorff_distances_log.eps
results/many-shapes-experiment/: above_threshold_genus_results.csv  above_zero_genus_results.csv  avg_results.csv  results.csv  zero_genus_results.csv
results/noise/: chamfer_errors.eps
results/runtime/: error-log.eps  runtime-log.eps  runtime-ours-log.eps
results/runtime-empty-space/: runtime-empty-space.eps
results/screening-weight-ablation/: chamfer-error.eps  hausdorff-distance.eps
scripts/: context.py  fig_adding-spheres.py  fig_batch-size-ablation.py  fig_clamp.py  fig_collision.py  fig_explainer-page1.py  fig_fine-tuning-plot.py  fig_many-shapes-experiment.py  fig_mc-vs-rfta-2d.py  fig_mc-vs-rfta.py  fig_noise.py  fig_outer_hulls.py  fig_rasterization-resolution-ablation.py  fig_runtime-empty-space.py  fig_runtime.py  fig_schild.py  fig_scorpion-and-horse.py  fig_screening-weight-ablation.py  fig_sharp_features.py  fig_step-by-step.py  fig_teaser.py  fig_teaser_loewe.py  fig_thin_features.py  fig_upsampled_mc.py  fig_ymca.py  fig_ymca_2d.py  test_2d.py  test_2d_fine_tune_point_cloud.py  test_2d_psr.py  test_2d_psr_with_sdf_info.py  test_2d_rasterization.py  test_2d_sdf_to_point_cloud.py  test_3d.py  test_3d_psr.py  test_3d_rasterization.py  test_3d_sdf_to_point_cloud.py  test_batching.py  test_boolean_hulls.py  test_ndc.py
src/cpp/: binding_outside_points_from_rejection_sampling.cpp  binding_point_cloud_to_mesh.cpp  fine_tune_point_cloud_iter.cpp  locally_make_feasible.cpp  outside_points_from_rejection_sampling.cpp  outside_points_from_rejection_sampling.h  point_cloud_to_mesh.cpp  point_cloud_to_mesh.h  rfta_bindings_core.cpp
src/python/rfta/: __init__.py  debug_utility.py  fine_tune_point_cloud.py  locally_make_feasible.py  outside_points_from_rasterization.py  outside_points_from_sampling.py  point_cloud_to_mesh.py  reach_for_the_arcs.py  sdf_to_point_cloud.py
test/: context.py  test_locally_make_feasible.py  test_outside_points_from_rasterization.py  test_point_cloud_to_mesh.py  test_reach_for_the_arcs.py
utility/: __init__.py  aux_sample_empty_space.py  boolean_hulls.py  chamfer.py  ndc.py  ndc_script.sh  read_mesh.py  sdf_energy.py
